CORRECT - Overflow-x

--- a/Base Converter/baseConverter.css
+++ b/Base Converter/baseConverter.css
@@ -27,6 +27,10 @@ img::selection {
     background-color: rgb(0,0,0,0);
 }
 
+html {
+    overflow-x: hidden;
+}
+
 body {
     padding: 0;
     margin: 0;
